--- a/frank/stylesheets/scss/variables.scss
+++ b/frank/stylesheets/scss/variables.scss
@@ -16,8 +16,8 @@ background-color: rgba(5, 0, 0, $alpha);
 	margin-left: 4.4%; float: left; min-height: 1px; position: relative;
 }
 
-$typeface-secondary: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$typeface-primary: Georgia, "Times New Roman", serif;
+$typeface-secondary: Sans-Serif;
+$typeface-primary: Georgia, serif;
 
 $thin: 100;
 $extra-light: 200;
