--- a/frank/print.css
+++ b/frank/print.css
@@ -1,1 +1,9 @@
-@media print{body{font-size:10pt}a{color:#999999}}
+@media print {
+  body {
+    font-size: 10pt;
+  }
+
+  a {
+    color: #999999;
+  }
+}
