--- a/frank/stylesheets/scss/comments.scss
+++ b/frank/stylesheets/scss/comments.scss
@@ -67,7 +67,7 @@
 		margin:$row-height*3 0;
 	}
 	.comment-edit-link {
-		font-weight: $bold;
+		font-weight: $font-weight-bold;
 		color:$color-accent;
 	}
 	.children {
