--- a/frank/stylesheets/scss/index.scss
+++ b/frank/stylesheets/scss/index.scss
@@ -6,7 +6,7 @@
 		border-bottom: 1px $color-light solid;
 		font: #{$font-size-small} #{$typeface-secondary};
 		.label {
-			font-weight: $bold;
+			font-weight: $font-weight-bold;
 		}
 		.caption {
 			font-style: italic;
@@ -41,7 +41,7 @@
 		}
 		header h1 {
 			font-size: $font-size-small;
-			font-weight: $bold;  
+			font-weight: $font-weight-bold;  
 		}
 		section p { font-size: $font-size-small; }
 		.metadata li { font-size: $font-size-x-small; }
