--- a/frank/stylesheets/scss/single.scss
+++ b/frank/stylesheets/scss/single.scss
@@ -57,7 +57,7 @@
 		}
 		h2 {
 			font-size: $font-size-medium;
-			font-weight: $bold;
+			font-weight: $font-weight-bold;
 		}
 		dd {
 			margin-left: $gutter-width; 
