--- a/frank/stylesheets/scss/editor-style.scss
+++ b/frank/stylesheets/scss/editor-style.scss
@@ -40,7 +40,7 @@ h1 {
 }
 h2 {
 	font-size: $font-size-medium;
-	font-weight: $bold;
+	font-weight: $font-weight-bold;
 }
 dd {
 	margin-left: $gutter-width; 
