--- a/frank/stylesheets/scss/global.scss
+++ b/frank/stylesheets/scss/global.scss
@@ -4,12 +4,17 @@ body {
 	color: $color-off-black;
 	height: 100%;
 	text-rendering: optimizelegibility; 
-	-webkit-font-smoothing: antialiased;
 }
 
 .reset {
 	margin:0;
 	padding:0;
+}
+
+.ir {
+  font: 0/0 a;
+  text-shadow: none;
+  color: transparent;
 }
 
 /*Images*/
@@ -22,15 +27,9 @@ a {
 }
 a:hover { color: $color-accent-alt; }
 
-.hide-text {
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-}
-
 /* Titles */
 .title, .widget-title {
-	font: #{$normal} #{$font-size-medium}/1.3 #{$typeface-secondary};
+	font: #{$font-weight-normal} #{$font-size-medium}/1.3 #{$typeface-secondary};
 	a {
 		color: $color-midtone;
 	}
@@ -43,7 +42,7 @@ a:hover { color: $color-accent-alt; }
 	font-size: $font-size-large;
 }
 .title.small {
-	font: $bold #{$font-size-small}/1.25 #{$typeface-secondary};
+	font: $font-weight-bold #{$font-size-small}/1.25 #{$typeface-secondary};
 }
 
 /*Headers*/
@@ -143,12 +142,12 @@ table {
 table, td, th { vertical-align: middle; }
 th, td {
 	text-align: left;
-	font-weight: $normal;
+	font-weight: $font-weight-normal;
 	padding: 0 5px; 
 }
 th {
 	border-bottom: 1px solid;
-	font-weight: $bold; 
+	font-weight: $font-weight-bold; 
 }
 
 /*Ordered & Unordered lists*/
@@ -171,7 +170,7 @@ dt, dd {
 	font-size: $font-size-x-small;
 }
 dt {
-	font-weight: $bold;
+	font-weight: $font-weight-bold;
 	margin-top: $row-height; 
 	&:first-child {
 		margin:0;
@@ -183,7 +182,7 @@ dd {
 
 /*Typographic tags*/
 small { font-size: $font-size-small; }
-strong { font-weight: $bold; }
+strong { font-weight: $font-weight-bold; }
 em { font-style: italic; }
 
 /*Generic Classes*/
@@ -257,7 +256,7 @@ em { font-style: italic; }
 	&.small {
 		font: $font-size-small $typeface-secondary;
 		.title {
-			font-weight:$bold;
+			font-weight:$font-weight-bold;
 			margin-right:15px;
 		}
 		a {
@@ -284,7 +283,7 @@ ul.metadata {
 		@extend .reset;
 	}
 	li.date {
-		font-weight: $bold;
+		font-weight: $font-weight-bold;
 	} 
 }
 
@@ -389,7 +388,7 @@ button, .button, input[type=submit] {
 	color: $color-midtone;
 	padding: 8px 10px;
 	border-radius: 3px;
-	font: #{$bold} #{$font-size-small} #{$typeface-secondary};
+	font: #{$font-weight-bold} #{$font-size-small} #{$typeface-secondary};
 	text-align: center;
 	text-shadow:0px 1px 0px rgba(255,254,254,.3);
 	border: 1px solid rgba(18, 7, 6, 0.2);
