--- a/somerandomdude/stylesheets/scss/footer.scss
+++ b/somerandomdude/stylesheets/scss/footer.scss
@@ -27,10 +27,9 @@
 	}
 }
 
-/* TODO: Generalize font-size rule*/
 .recommended {
 	dt {
-		font: #{$bold} #{$font-size-small} #{$typeface-secondary};
+		font: #{$font-weight-bold} #{$font-size-small} #{$typeface-secondary};
 		text-shadow:0px -1px 0px rgba(5,0,0,.3);
 		margin-bottom:2px;
 	}
@@ -41,7 +40,6 @@
 	}
 }
 
-/* TODO: Break main CSS out of #text-10*/
 #footer_main_promo {
 	margin-top: $row-height * 2 * -1;
 	box-shadow: 0px 4px 8px rgba(18, 7, 6, 0.3);
