--- a/somerandomdude/stylesheets/scss/global.scss
+++ b/somerandomdude/stylesheets/scss/global.scss
@@ -16,7 +16,7 @@ body {
 	width: 100px;
 	height: 20px;
 	background:inline-image('webbynode.png') no-repeat;
-	@extend .hide-text;
+	@extend .ir;
 }
 
 .post-info {
@@ -26,17 +26,12 @@ body {
 }
 
 .metadata  {
-	.tags a:not(:nth-child(3)):after {
-		content: ', ';
-	}
-	.tags a:nth-child(n+4) {
+	.tags {
 		display:none;
 	}
 }
 
 .fss { position: relative; }
-
-/*Temp*/
 
 .slide-container {
 	position:relative;
@@ -56,7 +51,7 @@ body {
 	display:block;
 }
 
-/*Temp*/
+
 .slideshow .slide-a, .slideshow .slide-b {
 	position:absolute;
 	opacity:0;
@@ -90,7 +85,7 @@ body {
 	background: #ded3d1;
 	color: #3d302f;
 	cursor: pointer;
-	font: #{$bold} 10px/20px #{$typeface-secondary} !important;
+	font: #{$font-weight-bold} 10px/20px #{$typeface-secondary} !important;
 	text-align: center;
 	width: 20px;
 	height: 20px; }
