--- a/somerandomdude/stylesheets/scss/sidebar.scss
+++ b/somerandomdude/stylesheets/scss/sidebar.scss
@@ -4,7 +4,7 @@
 	max-width:100%;
 	height:160px;
 	
-	@extend .hide-text;
+	@extend .ir;
 	display:block;
 	margin-bottom:$row-height;
 	@include default-shadow();
