--- a/somerandomdude/stylesheets/scss/variables.scss
+++ b/somerandomdude/stylesheets/scss/variables.scss
@@ -1,5 +1,5 @@
 $checkbox-sprite:url('data:image/gif;base64,R0lGODlhCgAeAJEAAP76+mJVVF1QT8zMzCH5BAHoAwMALAAAAAAKAB4AAAIelI+py+0PYxu02ouz3rz7v0kiApRAkJhnaqJkO44FADs=');
 
-$typeface-secondary: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$typeface-primary: Georgia, "Times New Roman", serif;
+$typeface-secondary: "Helvetica Neue", sans-serif;
+$typeface-primary: Georgia, serif;
 
