More cleanups, feature improvements, bug fixes and documentation improvements.

--- a/frank/stylesheets/scss/style.scss
+++ b/frank/stylesheets/scss/style.scss
@@ -1,12 +1,12 @@
-/* 
+/*! 
 Theme Name:     Frank
 Theme URI:      http://somerandomdude.com/work/frank 
 Description:    The next step of the Franklin Street theme.  
 Author:         P.J. Onori 
 Author URI:     http://somerandomdude.com/hello/  
-Version:        0.1.0
-License:				GPL 3.0
-License URI:		http://www.gnu.org/copyleft/gpl.html 
+Version:        1.0
+License:		GPL 3.0
+License URI:	http://www.gnu.org/copyleft/gpl.html 
 Tags: brown, red, white, two-columns, fixed-width, sticky-post, custom-menu
 */
 @import "variables";
