--- a/frank/admin/stylesheets/frank-options.css
+++ b/frank/admin/stylesheets/frank-options.css
@@ -196,6 +196,12 @@ a.frank-content-section-delete {
 	display: block;
 }
 
+.main-options-container {
+	display: block;
+	margin: 20px 0 0 0;
+	padding: 0 20px;
+}
+
 .top-options-container {
 	display: block;
 	height: 60px;
