Stick post fixes and cleanups

--- a/frank/stylesheets/scss/global.scss
+++ b/frank/stylesheets/scss/global.scss
@@ -235,7 +235,9 @@ em { font-style: italic; }
 
 /*TODO: Style sticky post*/
 .sticky {
-	
+	.post-title:before {
+		content:"Sticky: ";
+	}
 }
 
 .bypostauthor {
