--- a/frank/editor-style.css
+++ b/frank/editor-style.css
@@ -1019,6 +1019,10 @@ em {
 }
 
 /*TODO: Style sticky post*/
+.sticky .post-title:before {
+  content: "Sticky: ";
+}
+
 .bypostauthor {
   border: 2px solid #5d504f;
   padding: 15px 0;
