Cleanups and RTL support

--- a/frank/ie.css
+++ b/frank/ie.css
@@ -1,57 +1,73 @@
 img {
-  -ms-interpolation-mode: bicubic; }
+  -ms-interpolation-mode: bicubic;
+}
 
 .chromeframe {
   background: #f0eceb;
   color: #050000;
   font: 700 13px Sans-Serif;
   padding: 5px 15px;
-  text-align: center; }
+  text-align: center;
+}
 
 #top_bar {
-  background: #050000; }
+  background: #050000;
+}
 
 #content.single {
-  padding-bottom: 45px; }
+  padding-bottom: 45px;
+}
 
 #sub_header .widget-4, #sub_header .widget-7 {
   clear: left;
-  margin-left: 0; }
+  margin-left: 0;
+}
 
 .post-group {
-  position: relative; }
+  position: relative;
+}
 
 .post-group.twoup .post-3, .post-group.twoup .post-5, .post-group.twoup .post-7, .post-group.twoup .post-9, .post-group.twoup .post-11, .post-group.twoup .post-13, .post-group.twoup .post-15, .post-group.twoup .post-17, .post-group.twoup .post-19 {
   clear: left !important;
-  margin-left: 0 !important; }
+  margin-left: 0 !important;
+}
 
 .post-group.threeup .post-4, .post-group.threeup .post-7, .post-group.threeup .post-10, .post-group.threeup .post-13, .post-group.threeup .post-16, .post-group.threeup .post-19, .post-group.threeup .post-22, .post-group.threeup .post-25, .post-group.threeup .post-28 {
   clear: left !important;
-  margin-left: 0 !important; }
+  margin-left: 0 !important;
+}
 
 .post-group.fourup .post-5, .post-group.fourup .post-9, .post-group.fourup .post-13, .post-group.fourup .post-17, .post-group.fourup .post-21, .post-group.fourup .post-25, .post-group.fourup .post-29, .post-group.fourup .post-33, .post-group.fourup .post-37 {
   clear: left !important;
-  margin-left: 0 !important; }
+  margin-left: 0 !important;
+}
 
 #page-footer .widget-3, #page-footer .widget-5, #page-footer .widget-7 {
   clear: left;
-  margin-left: 0; }
+  margin-left: 0;
+}
 
 #post-footer .widget-4, #post-footer .widget-7, #post-footer .widget-10 {
   clear: left;
-  margin-left: 0; }
+  margin-left: 0;
+}
 
 #comments-container #commentform label {
-  display: block; }
+  display: block;
+}
 #comments-container #commentform #comment-form-info label {
-  text-align: right; }
+  text-align: right;
+}
 #comments-container #commentform #comment-form-info input[type=text] {
-  margin-bottom: 15px; }
+  margin-bottom: 15px;
+}
 #comments-container #commentform textarea {
-  height: 137px; }
+  height: 137px;
+}
 
 #comment-form-content dl {
-  text-align: left; }
+  text-align: left;
+}
 
 .clearfix:after {
   content: ".";
@@ -59,13 +75,17 @@ img {
   clear: both;
   visibility: hidden;
   line-height: 0;
-  height: 0; }
+  height: 0;
+}
 
 .clearfix {
-  display: inline-block; }
+  display: inline-block;
+}
 
 html[xmlns] .clearfix {
-  display: block; }
+  display: block;
+}
 
 * html .clearfix {
-  height: 1%; }
+  height: 1%;
+}
