--- a/frank/style.css
+++ b/frank/style.css
@@ -4,7 +4,7 @@ Theme URI:      http://somerandomdude.com/work/frank
 Description:    The next step of the Franklin Street theme.  
 Author:         P.J. Onori 
 Author URI:     http://somerandomdude.com/hello/  
-Version:        1.0
+Version:        0.9.1
 License:		GPL 3.0
 License URI:	http://www.gnu.org/copyleft/gpl.html 
 Tags: brown, red, white, two-columns, fixed-width, sticky-post, custom-menu
@@ -1734,6 +1734,10 @@ button, .button, input[type=submit] {
 }
 .comment-content blockquote, .comment-content blockquote p {
   font-size: 13px;
+}
+
+.comment-reply-link {
+  font: 700 11px Sans-Serif;
 }
 
 .comment-info {
