--- a/frank/stylesheets/scss/comments.scss
+++ b/frank/stylesheets/scss/comments.scss
@@ -34,6 +34,10 @@
 	}
 }
 
+.comment-reply-link {
+	font: $font-weight-bold $font-size-x-small $typeface-secondary;
+}
+
 .comment-info {
 	@extend .column;
 	width: $three-columns;
